[package]
name = "message_filter"
version = "0.3.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A size or time based message filter that takes any generic type as a key and will drop keys after a time period, or once a maximum number of messages is reached (LRU Cache pattern)."
documentation = "http://maidsafe.net/message_filter/latest"
repository = "https://github.com/maidsafe/message_filter"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://maidsafe.net"

[dependencies]
time = "~0.1.34"

[dev-dependencies]
rand = "~0.3.12"
