[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A size or time based message filter that takes any generic type as a key and will drop keys after a time period, or once a maximum number of messages is reached (LRU Cache pattern)."
documentation = "http://maidsafe.net/message_filter/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "message_filter"
readme = "README.md"
repository = "https://github.com/maidsafe/message_filter"
version = "0.6.0"

[dependencies]
clippy = {version = "~0.0.68", optional = true}

[dev-dependencies]
rand = "~0.3.14"
